--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASEURL= http://35.188.203.147:8080/
+REACT_APP_BASEURL= http://http://192.168.0.166/:8080/
 # REACT_APP_BASEURL= https://3x3kc5nk-4000.inc1.devtunnels.ms/
